// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`M20230806 > Features > should do nothing 1`] = `
[
  {
    "key": "sample-feature-id",
    "value": {
      "feature": {
        "bbox": [
          1,
          2,
          3,
          4,
        ],
        "geometry": {
          "coordinates": [
            1,
            5,
          ],
          "type": "Point",
        },
        "id": "sample-feature-id",
        "properties": {
          "val": "var",
        },
        "type": "Feature",
      },
      "layerId": "test-layer-id-1",
      "version": 99,
    },
  },
]
`;

exports[`M20230806 > Features > should migrate 1`] = `
[
  {
    "key": "sample-feature-id",
    "value": {
      "feature": {
        "bbox": [
          1,
          2,
          3,
          4,
        ],
        "geometry": {
          "coordinates": [
            1,
            5,
          ],
          "type": "Point",
        },
        "id": "sample-feature-id",
        "properties": {
          "val": "var",
        },
        "type": "Feature",
      },
      "layerId": "test-layer-id-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 > Layers > should do nothing 1`] = `
[
  {
    "key": "test-layer-1",
    "value": {
      "layer": {
        "metadata": {
          "active": false,
          "id": "test-layer-1",
          "model": "OSM",
          "name": "OpenStreetMap",
          "opacity": 1,
          "type": "Predefined",
          "visible": true,
        },
        "type": "Predefined",
      },
      "version": 99,
    },
  },
]
`;

exports[`M20230806 > Layers > should migrate 1`] = `
[
  {
    "key": "test-layer-1",
    "value": {
      "layer": {
        "metadata": {
          "active": false,
          "id": "test-layer-1",
          "model": "OSM",
          "name": "OpenStreetMap",
          "opacity": 1,
          "type": "Predefined",
          "visible": true,
        },
        "type": "Predefined",
      },
      "version": 2,
    },
  },
]
`;

exports[`M20230806 > Layouts > should do nothing 1`] = `
[
  {
    "key": "test-layout-1",
    "value": {
      "entry": {
        "format": {
          "height": 297,
          "id": "A4_PORTRAIT",
          "orientation": "portrait",
          "width": 210,
        },
        "id": "test-layout-1",
        "name": "Sample layout",
        "textFrames": [
          {
            "content": [
              {
                "children": [
                  {
                    "text": "Hey man, how are you ?",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "id": "test-text-frame-1",
            "position": {
              "x": 10,
              "y": 10,
            },
            "size": {
              "height": 100,
              "width": 100,
            },
            "style": {
              "background": "#FFFFFF",
              "withBorders": true,
              "withShadows": true,
            },
          },
        ],
        "view": {
          "center": [
            1.5,
            45.4,
          ],
          "projection": {
            "name": "EPSG:3857",
          },
          "resolution": 1000,
          "rotation": 0,
        },
      },
      "id": "test-layout-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 > Layouts > should migrate 1`] = `
[
  {
    "key": "test-layout-1",
    "value": {
      "entry": {
        "format": {
          "height": 297,
          "id": "A4_PORTRAIT",
          "orientation": "portrait",
          "width": 210,
        },
        "id": "test-layout-1",
        "name": "Sample layout",
        "textFrames": [
          {
            "content": [
              {
                "children": [
                  {
                    "text": "Hey man, how are you ?",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "id": "test-text-frame-1",
            "position": {
              "x": 10,
              "y": 10,
            },
            "size": {
              "height": 100,
              "width": 100,
            },
            "style": {
              "background": "#FFFFFF",
              "withBorders": true,
              "withShadows": true,
            },
          },
        ],
        "view": {
          "center": [
            1.5,
            45.4,
          ],
          "projection": {
            "name": "EPSG:3857",
          },
          "resolution": 1000,
          "rotation": 0,
        },
      },
      "id": "test-layout-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 > Projects > should do nothing 1`] = `
[
  {
    "key": "test-project-1",
    "value": {
      "layerIds": [
        "layer-id-1",
        "layer-id-2",
        "layer-id-3",
      ],
      "layouts": {
        "abcMapAttributionsEnabled": true,
        "layoutIds": [
          "layout-id-1",
          "layout-id-2",
          "layout-id-3",
        ],
      },
      "metadata": {
        "id": "test-project-1",
        "name": "Test project 1",
        "public": false,
        "version": "1.3.0",
      },
      "sharedViews": {
        "fullscreen": false,
        "mapDimensions": {
          "height": 600,
          "width": 800,
        },
        "viewIds": [
          "shared-view-id-1",
          "shared-view-id-2",
          "shared-view-id-3",
        ],
      },
      "version": 99,
      "view": {
        "center": [
          1,
          2,
        ],
        "projection": {
          "name": "EPSG:3857",
        },
        "resolution": 1000,
        "rotation": 0,
      },
    },
  },
]
`;

exports[`M20230806 > Projects > should migrate 1`] = `
[
  {
    "key": "test-project-1",
    "value": {
      "layerIds": [
        "layer-id-1",
        "layer-id-2",
        "layer-id-3",
      ],
      "layouts": {
        "abcMapAttributionsEnabled": true,
        "layoutIds": [
          "layout-id-1",
          "layout-id-2",
          "layout-id-3",
        ],
      },
      "metadata": {
        "id": "test-project-1",
        "name": "Test project 1",
        "public": false,
        "version": "1.3.0",
      },
      "sharedViews": {
        "fullscreen": false,
        "mapDimensions": {
          "height": 600,
          "width": 800,
        },
        "viewIds": [
          "shared-view-id-1",
          "shared-view-id-2",
          "shared-view-id-3",
        ],
      },
      "version": 2,
      "view": {
        "center": [
          1,
          2,
        ],
        "projection": {
          "name": "EPSG:3857",
        },
        "resolution": 1000,
        "rotation": 0,
      },
    },
  },
]
`;

exports[`M20230806 > SharedViews > should do nothing 1`] = `
[
  {
    "key": "test-shared-view-1",
    "value": {
      "entry": {
        "id": "test-shared-view-1",
        "layers": [],
        "scale": {
          "x": 30,
          "y": 100,
        },
        "textFrames": [
          {
            "content": [
              {
                "children": [
                  {
                    "text": "Hey man, how are you ?",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "id": "test-text-frame-1",
            "position": {
              "x": 10,
              "y": 10,
            },
            "size": {
              "height": 100,
              "width": 100,
            },
            "style": {
              "background": "#FFFFFF",
              "withBorders": true,
              "withShadows": true,
            },
          },
        ],
        "title": "Sample layout",
        "view": {
          "center": [
            1.5,
            45.4,
          ],
          "projection": {
            "name": "EPSG:3857",
          },
          "resolution": 1000,
          "rotation": 0,
        },
      },
      "id": "test-shared-view-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 > SharedViews > should migrate 1`] = `
[
  {
    "key": "test-shared-view-1",
    "value": {
      "entry": {
        "id": "test-shared-view-1",
        "layers": [],
        "scale": {
          "x": 30,
          "y": 100,
        },
        "textFrames": [
          {
            "content": [
              {
                "children": [
                  {
                    "text": "Hey man, how are you ?",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "id": "test-text-frame-1",
            "position": {
              "x": 10,
              "y": 10,
            },
            "size": {
              "height": 100,
              "width": 100,
            },
            "style": {
              "background": "#FFFFFF",
              "withBorders": true,
              "withShadows": true,
            },
          },
        ],
        "title": "Sample layout",
        "view": {
          "center": [
            1.5,
            45.4,
          ],
          "projection": {
            "name": "EPSG:3857",
          },
          "resolution": 1000,
          "rotation": 0,
        },
      },
      "id": "test-shared-view-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 > Tiles > should do nothing 1`] = `
[
  {
    "key": "http://1",
    "value": {
      "image": "blob data 1",
      "url": "http://1",
      "version": 99,
    },
  },
]
`;

exports[`M20230806 > Tiles > should migrate 1`] = `
[
  {
    "key": "http://1",
    "value": {
      "image": "blob data 1",
      "url": "http://1",
      "version": 2,
    },
  },
]
`;
